src/test/ui/cross/cross-borrow-trait.stderr
error[E0308]: mismatched types
  --> $DIR/cross-borrow-trait.rs:10:26
   |
LL |     let _y: &dyn Trait = x;
   |             ----------   ^ expected `&dyn Trait`, found struct `Box`
   |             |
   |             expected due to this
   |
   = note: expected reference `&dyn Trait`
                 found struct `Box<dyn Trait>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
